gcp/anthos/scaleup/lab-automation/acm_files/namespaces/test-app/service.yaml
#Expose the apache web server as a Service
apiVersion: v1
kind: Service
metadata:
  name: apache-deployment
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache-deployment
