gcp/anthos/scaleup/lab-automation/acm_files/namespaces/test-app/ingress.yaml
#Specify the ingress resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citrix-ingress
  annotations:
   kubernetes.io/ingress.class: "tier-1-vpx"
   ingress.citrix.com/insecure-termination: "allow"
spec:
  rules:
  - host: test-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-deployment
            port: 
              number: 80
